<?xml version="1.0" encoding="utf-8"?><!--<?xml version="1.0" encoding="utf-8"?>-->

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--    <TextView-->
<!--        android:text="@string/nav_home"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"/>-->
<!--</FrameLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_home_title"
        android:text="@string/nav_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/text_features_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/features"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/text_feature_live_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_location"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/text_feature_save_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_location"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/text_feature_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/text_feature_save_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_picture"
        android:textSize="16sp"/>

</LinearLayout>