<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nav_settings"
    android:textSize="20sp"
    android:layout_marginBottom="24dp"/>

<!-- Section Langues -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/language"
    android:labelFor="@+id/languages_dropdown"
    android:layout_marginTop="16dp"/>

<Spinner
    android:id="@+id/languages_dropdown"
    android:layout_width="wrap_content"
    android:minWidth="150dp"
    android:layout_height="wrap_content"
    android:entries="@array/languages"/>

<TextView
    android:id="@+id/dropdown_items"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"/>

<!-- Section Thèmes -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/theme"
    android:labelFor="@+id/themes_dropdown"
    android:layout_marginTop="16dp"/>

<Spinner
    android:id="@+id/themes_dropdown"
    android:layout_width="wrap_content"
    android:minWidth="150dp"
    android:layout_height="wrap_content"
    android:entries="@array/themes"/>

<TextView
    android:id="@+id/themes_items"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"/>

</LinearLayout>